--- a/css/styles.css
+++ b/css/styles.css
@@ -11077,7 +11077,7 @@ body {
   height: auto;
   min-height: 100rem;
   padding: 15rem 0;
-  background: linear-gradient(to bottom, rgba(210, 180, 140, 0.3) 0%, rgba(210, 180, 140, 0.7) 75%, #000 100%), url("../assets/img/weddingvenue.JPG");
+  background: linear-gradient(to bottom, rgba(210, 180, 140, 0.3) 0%, rgba(210, 180, 140, 0.7) 75%, #000 100%), url(https://socialiteeventplanning.com/wp-content/uploads/2023/08/image.png);
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
