--- a/css/styles.css
+++ b/css/styles.css
@@ -8232,7 +8232,8 @@ textarea.form-control-lg {
 .text-white {
   --bs-text-opacity: 1;
   color: rgba(var(--bs-white-rgb), var(--bs-text-opacity)) !important;
-  font-size: 35px;
+  font-size: 40px;
+  font-weight: bolder;
 }
 
 .text-body {
@@ -8252,7 +8253,7 @@ textarea.form-control-lg {
 
 .text-white-50 {
   --bs-text-opacity: 1;
-  color: rgba(255, 255, 255, 0.6) !important;
+  color: rgba(var(--bs-white-rgb), var(--bs-text-opacity)) !important;
   font-size: 20px;
 }
 
@@ -11078,8 +11079,8 @@ body {
   width: 100%;
   height: auto;
   min-height: 100rem;
-  padding: 15rem 0;
-  background: linear-gradient(to bottom, rgba(210, 180, 140, 0.3) 0%, rgba(210, 180, 140, 0.7) 75%, #000 100%), url("../assets/img/mainbackgroundimage.png");
+  padding: 10rem 0;
+  background: linear-gradient(to bottom, rgba(210, 180, 140, 0.3) 0%, rgba(210, 180, 140, 0.7) 75%, #000 100%), url("../assets/img/mainbackgroundimage.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
@@ -11091,6 +11092,7 @@ body {
   line-height: 2.5rem;
   letter-spacing: 0.8rem;
   background: linear-gradient(rgba(255, 255, 255, 5.0), rgba(255, 255, 255, 5.0));
+  margin-top: 0;
   -webkit-text-fill-color:rgba(0, 0, 0, 0.03);
   -webkit-background-clip: text;
           background-clip: text;
