--- a/styles.css
+++ b/styles.css
@@ -11135,6 +11135,10 @@ h2{
   text-decoration: underline;
 }
 
+h2.text-white.mb-5 {
+  text-decoration: none; /* Removes the underline for specific class combination */
+}
+
 .about-section {
   padding-top: 10rem;
   background: linear-gradient(to bottom, rgba(210, 180, 140, 0.9) 0%, rgba(210, 180, 140, 0.75) 75%, rgba(210, 180, 140, 0.8) 100%);
